--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <canvas id="myCanvas"></canvas>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
